cmake通用接口使用代码

--- a/test_add_sub_dir/sub/CMakeLists.txt
+++ b/test_add_sub_dir/sub/CMakeLists.txt
@@ -3,7 +3,7 @@ message(STATUS "from sub/sub.cmake")
 # 打印源代码目录
 message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 
-# 打印构建目录
+# 生成构建目录
 message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 
 # 打印当前执行cmake脚本的完整名称
