--- a/test_include/CMakeLists.txt
+++ b/test_include/CMakeLists.txt
@@ -12,10 +12,13 @@ message(STATUS "from top-level CMakeLists.txt")
 # 打印源代码目录
 message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 
+# 打印构建目录
+message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+
 # 打印当前执行cmake脚本的完整名称
 message(STATUS "CMAKE_CURRENT_LIST_FILE: ${CMAKE_CURRENT_LIST_FILE}")
 
 # 打印当前执行cmake脚本的完整目录
 message(STATUS "CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
 
-message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+include(sub/sub.cmake)
